--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/react": "18.2.35",
     "@types/react-dom": "18.2.14",
     "mapbox-gl": "^2.15.0",
+    "firebase": "^10.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
