--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-helmet": "^6.1.0",
     "react-map-gl": "^7.1.6"
   },
   "scripts": {
