--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@types/mapbox-gl": "^2.7.17",
     "@types/react": "18.2.35",
     "@types/react-dom": "18.2.14",
     "firebase": "^10.5.2",
     "mapbox-gl": "^2.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-firebase-hooks": "^5.1.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-helmet": "^6.1.0",
+    "react-map-gl": "^7.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
