--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@types/mapbox-gl": "^2.7.17",
     "@types/react": "18.2.35",
     "@types/react-dom": "18.2.14",
+    "@types/react-helmet": "^6.1.9",
     "firebase": "^10.5.2",
+    "jotai": "^2.5.1",
     "mapbox-gl": "^2.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
