--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
       "jsx": "react-jsx",
       "lib": ["DOM", "ES2022"],
       "moduleResolution": "node",
-      "target": "ES2022"
+      "target": "ES2022",
+      "strict": true,
     }
   }
   
