--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "git diff --name-only --diff-filter=d | xargs prettier --write"
+}
   },
   "devDependencies": {
+    "husky": "^8.0.3",
     "prettier": "^3.0.3",
     "react-scripts": "latest"
   },
@@ -35,5 +38,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run format"
+    }
   }
 }
