--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "format": "git diff --name-only --diff-filter=d | xargs prettier --write"
-}
+    "prepare": "husky install"
   },
   "devDependencies": {
     "husky": "^8.0.3",
+    "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
     "react-scripts": "latest"
   },
@@ -39,9 +39,7 @@
       "last 1 safari version"
     ]
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run format"
-    }
+  "lint-staged": {
+    "*.{js,css,md}": "prettier --write"
   }
 }
