--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-firebase-hooks": "^5.1.1",
     "react-helmet": "^6.1.0",
     "react-map-gl": "^7.1.6",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "react-use": "^17.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
