--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.48.2",
     "react-map-gl": "^7.1.6",
     "react-router-dom": "^6.18.0"
   },
