--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.48.2",
     "react-map-gl": "^7.1.6",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "react-use": "^17.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
